fix header and body wrap size 1000px

--- a/css/main.css
+++ b/css/main.css
@@ -419,10 +419,10 @@ header.site-header-philosophy {
 
 .site-title-philosophy:hover{   color: #cc6600; }
 
-..site-title-philosophy {  float: left;}
+.site-title-philosophy {  float: left;}
 
 
-..site-title-philosophy,.site-title:visited {
+.site-title-philosophy,.site-title:visited {
   display: inline;
   padding: 15px;
   color: white;
@@ -442,12 +442,11 @@ header.site-header-blog {
   top: 0px;
   left: 0px;
   right: 0px;
-  bottom: 5px;
+  bottom: 10px;
   background: white;
-  height: 4em;
+  height: 3em;
   border-radius: 0px;
-  width: 1000px;
-  font-size: 2em;
+  font-size: 3em;
   color: #000000;
   text-align: center;
   vertical-align: 4em;
@@ -459,27 +458,29 @@ header.site-header-blog.wrap {
   max-width: 33em;
   margin: 4px auto;
   padding-top: 0px;
+  font-size: 2em;
+  font-style: italic;
 }
 
 
 
-.site-title-blog:hover{   color: #ffffff; text-align: center; }
+.site-title-blog:hover{   color: #cc6600; text-align: center; }
 
 .site-title-blog {  
-  font-size: 12px; 
-  color: #000000; 
+  font-size: 30px; 
+  color: #cc6600; 
 }
 
 .site-title-blog,.site-title:visited {
   display: inline;
-  padding: 0px;
-  color: #ffffff;
+  padding: 5px;
+  color: #cc6600;
 }
 
 
 #content-wrapper-blog {
-margin:4em auto;
-max-width:800px;
+margin:5em auto;
+max-width:1000px;
 
 
 /* 
